@@ -3,7 +3,6 @@ package org.jabref.gui.shared;
 import java.io.UnsupportedEncodingException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.security.GeneralSecurityException;
 import java.sql.SQLException;
 import java.util.List;
@@ -93,7 +92,7 @@ public class SharedDatabaseLoginDialogViewModel extends AbstractViewModel {
         });
 
         Predicate<String> notEmpty = input -> (input != null) && !input.trim().isEmpty();
-        Predicate<String> fileExists = input -> Files.exists(Paths.get(input));
+        Predicate<String> fileExists = input -> Files.exists(Path.of(input));
         Predicate<String> notEmptyAndfilesExist = notEmpty.and(fileExists);
 
         databaseValidator = new FunctionBasedValidator<>(database, notEmpty, ValidationMessage.error(Localization.lang("Required field \"%0\" is empty.", Localization.lang("Library"))));
@@ -144,7 +143,7 @@ public class SharedDatabaseLoginDialogViewModel extends AbstractViewModel {
         }
 
         if (autosave.get()) {
-            Path localFilePath = Paths.get(folder.getValue());
+            Path localFilePath = Path.of(folder.getValue());
 
             if (Files.exists(localFilePath) && !Files.isDirectory(localFilePath)) {
 
@@ -167,7 +166,7 @@ public class SharedDatabaseLoginDialogViewModel extends AbstractViewModel {
 
             if (!folder.getValue().isEmpty()) {
                 try {
-                    new SaveDatabaseAction(panel, Globals.prefs, Globals.entryTypesManager).saveAs(Paths.get(folder.getValue()));
+                    new SaveDatabaseAction(panel, Globals.prefs, Globals.entryTypesManager).saveAs(Path.of(folder.getValue()));
                 } catch (Throwable e) {
                     LOGGER.error("Error while saving the database", e);
                 }
