@@ -3,7 +3,6 @@ package org.jabref.logic.importer;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.stream.Stream;
@@ -35,7 +34,7 @@ class ImportFormatReaderIntegrationTest {
     @ParameterizedTest
     @MethodSource("importFormats")
     void testImportUnknownFormat(String resource, String format, int count) throws Exception {
-        Path file = Paths.get(ImportFormatReaderIntegrationTest.class.getResource(resource).toURI());
+        Path file = Path.of(ImportFormatReaderIntegrationTest.class.getResource(resource).toURI());
         ImportFormatReader.UnknownFormatImport unknownFormat = reader.importUnknownFormat(file, new DummyFileUpdateMonitor());
         assertEquals(count, unknownFormat.parserResult.getDatabase().getEntryCount());
     }
@@ -43,14 +42,14 @@ class ImportFormatReaderIntegrationTest {
     @ParameterizedTest
     @MethodSource("importFormats")
     void testImportFormatFromFile(String resource, String format, int count) throws Exception {
-        Path file = Paths.get(ImportFormatReaderIntegrationTest.class.getResource(resource).toURI());
+        Path file = Path.of(ImportFormatReaderIntegrationTest.class.getResource(resource).toURI());
         assertEquals(count, reader.importFromFile(format, file).getDatabase().getEntries().size());
     }
 
     @ParameterizedTest
     @MethodSource("importFormats")
     void testImportUnknownFormatFromString(String resource, String format, int count) throws Exception {
-        Path file = Paths.get(ImportFormatReaderIntegrationTest.class.getResource(resource).toURI());
+        Path file = Path.of(ImportFormatReaderIntegrationTest.class.getResource(resource).toURI());
         String data = new String(Files.readAllBytes(file), StandardCharsets.UTF_8);
         assertEquals(count, reader.importUnknownFormat(data).parserResult.getDatabase().getEntries().size());
     }
