@@ -7,7 +7,6 @@ import java.net.URISyntaxException;
 import java.nio.charset.Charset;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
@@ -62,7 +61,7 @@ public class EndnoteImporterTest {
         List<String> list = Arrays.asList("Endnote.pattern.A.enw", "Endnote.pattern.E.enw", "Endnote.book.example.enw");
 
         for (String string : list) {
-            Path file = Paths.get(EndnoteImporterTest.class.getResource(string).toURI());
+            Path file = Path.of(EndnoteImporterTest.class.getResource(string).toURI());
             assertTrue(importer.isRecognizedFormat(file, StandardCharsets.UTF_8));
         }
     }
@@ -74,14 +73,14 @@ public class EndnoteImporterTest {
                 "Endnote.pattern.no_enw", "empty.pdf", "annotated.pdf");
 
         for (String string : list) {
-            Path file = Paths.get(EndnoteImporterTest.class.getResource(string).toURI());
+            Path file = Path.of(EndnoteImporterTest.class.getResource(string).toURI());
             assertFalse(importer.isRecognizedFormat(file, Charset.defaultCharset()));
         }
     }
 
     @Test
     public void testImportEntries0() throws IOException, URISyntaxException {
-        Path file = Paths.get(EndnoteImporterTest.class.getResource("Endnote.entries.enw").toURI());
+        Path file = Path.of(EndnoteImporterTest.class.getResource("Endnote.entries.enw").toURI());
         List<BibEntry> bibEntries = importer.importDatabase(file, StandardCharsets.UTF_8).getDatabase().getEntries();
 
         assertEquals(5, bibEntries.size());
@@ -141,7 +140,7 @@ public class EndnoteImporterTest {
 
     @Test
     public void testImportEntriesBookExample() throws IOException, URISyntaxException {
-        Path file = Paths.get(EndnoteImporterTest.class.getResource("Endnote.book.example.enw").toURI());
+        Path file = Path.of(EndnoteImporterTest.class.getResource("Endnote.book.example.enw").toURI());
         List<BibEntry> bibEntries = importer.importDatabase(file, StandardCharsets.UTF_8).getDatabase().getEntries();
 
         BibEntry entry = bibEntries.get(0);
